--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dayjs": "^1.10.7",
     "framer-motion": "^5.5.5",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
