--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-accessible-accordion": "^4.0.0",
 		"react-awesome-reveal": "^3.8.1",
 		"react-dom": "^17.0.2",
+		"react-dotenv": "^0.1.3",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
@@ -19,8 +20,8 @@
 		"web-vitals": "^2.1.2"
 	},
 	"scripts": {
-		"start": "react-dotenv && react-scripts start",
-		"build": "react-dotenv && react-scripts build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
