--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-awesome-reveal": "^3.8.1",
 		"react-dom": "^17.0.2",
 		"react-dotenv": "^0.1.3",
+		"react-helmet": "^6.1.0",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
